   <https://github.com/jhy/jsoup/pull/509>

 * Fixed an issue where Jsoup.Connection would throw an IO Exception when reading a page with zero content-length.
   <https://github.com/jhy/jsoup/issues/538>

 * Improved the equals() and hashcode() methods in Node, to consider all their child content, for DOM tree comparisons.
   <https://github.com/jhy/jsoup/issues/537>

*** Release 1.8.1 [2014-Sep-27]
 * Introduced the ability to chose between HTML and XML output, and made HTML the default. This means img tags are
   output as <img>, not <img />. XML is the default when using the XmlTreeBuilder. Control this with the
   Document.OutputSettings.syntax() method.

 * Improved the performance of Element.text() by 3.2x

 * Improved the performance of Element.html() by 1.7x

 * Improved file read time by 2x, giving around a 10% speed improvement to file parses.
   <https://github.com/jhy/jsoup/issues/248>

 * Tightened the scope of what characters are escaped in attributes and textnodes, to align with the spec. Also, when
   using the extended escape entities map, only escape a character if the current output charset does not support it.
   This produces smaller, more legible HTML, with greater control over the output (by setting charset and escape mode).

 * If pretty-print is disabled, don't trim outer whitespace in Element.html()
   <https://github.com/jhy/jsoup/issues/368>

 * In the HTML Cleaner, allow span tags in the basic whitelist, and span and div tags in the relaxed whitelist.

  * Added Element.cssSelector(), which returns a unique CSS selector/path for an element.
    <https://github.com/jhy/jsoup/pull/459>

 * Fixed an issue where <svg><img/></svg> was parsed as <svg><image/></svg>
   <https://github.com/jhy/jsoup/issues/364>

 * Fixed an issue where a UTF-8 BOM character was not detected if the HTTP response did not specify a charset, and
   the HTML body did, leading to the head contents incorrectly being parsed into the body. Changed the behavior so that